Fiber-based jobs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,7 +58,12 @@ add_executable(${PROJECT_NAME} src/main.c
         src/system/deque.c
         src/system/deque.h
         src/system/atomic.c
-        src/system/atomic.h)
+        src/system/atomic.h
+        src/system/deque2.c
+        src/system/deque2.h
+        src/system/task2.c
+        src/system/task2.h
+)
 
 if(WC_SANITIZE)
     if(MSVC)
